# MikuMikuWorld

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPackInfo  Info.plist  Info.plist.in  LICENSE  MikuMikuWorld.sln  README.br.md  README.ja.md  README.md  TRANSLATION.md  compile_flags.txt  typos.toml
.github/workflows/: build.yml
Depends/ANGLE/lib/: libEGL.dylib  libEGL.lib  libGLESv2.lib
Depends/GLFW/Debug/: glfw3.lib
Depends/GLFW/Release/: glfw3.lib
Depends/glad/include/glad/: glad.h
Depends/glad/src/: glad.c
Depends/libzip/lib/: zip.lib
Depends/miniaudio/: miniaudio.h
Depends/openssl/include/openssl/: bio.h  cmp.h  conf.h  configuration.h  core_names.h  opensslv.h  pkcs7.h  ssl.h  x509_vfy.h
Depends/openssl/lib/: libcrypto.lib  libssl.lib
Depends/zlib/lib/: zlib.lib  zlibstat.lib  zlibstatic.lib
Depends/zlib/src/: gzlib.c
Licenses/: DirectXMath.txt  miniaudio.txt  stb_vorbis.txt  zlib.txt
MikuMikuWorld/: AggregateNotesFilter.cpp  AggregateNotesFilter.h  Application.cpp  Application.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  Archive.cpp  Archive.h  ArchiveError.cpp  ArchiveError.h  ArchiveFile.cpp  ArchiveFile.h  AutoSaveManager.cpp  AutoSaveManager.h  Background.cpp  Background.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  Canvas.cpp  Canvas.h  ChannelProvider.h  Clipboard.cpp  Clipboard.h  Color.cpp  Color.h  Colors.h  Constants.h  DebugEffectView.cpp  DebugEffectView.h  DefaultLanguage.h  Dialogs.cpp  Editing.cpp  EditorScoreData.h  EditorWindows.cpp  EffectView.cpp  EffectView.h  File.cpp  File.h  (+133 more)
MikuMikuWorld/Audio/: AudioEvent.cpp  AudioEvent.h  AudioManager.cpp  AudioManager.h  Sound.cpp  Sound.h  SoundSource.cpp  SoundSource.h  Waveform.h
MikuMikuWorld/Commands/: Command.cpp  Command.h  CommandKey.h  CommandKeyParser.cpp  CommandKeyParser.h  CommandManager.cpp  CommandManager.h
MikuMikuWorld/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
MikuMikuWorld/Rendering/: AnchorType.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VertexBuffer.inl
MikuMikuWorld/res/: Engine.scp  mmw_icon.icns  tex_note_common_all.txt
MikuMikuWorld/res/editor/spr/: stage.txt
MikuMikuWorld/res/effect/: particles.pte
MikuMikuWorld/res/effect/0/: fx_lane_critical.json  fx_lane_critical_flick.json  fx_lane_default.json  fx_note_critical_flick_aura.json  fx_note_critical_flick_flash.json  fx_note_critical_flick_gen.json  fx_note_critical_long_aura.json  fx_note_critical_long_gen.json  fx_note_critical_long_hold_gen.json  fx_note_critical_long_hold_gen_aura.json  fx_note_critical_long_hold_via_aura.json  fx_note_critical_normal_aura.json  fx_note_critical_normal_gen.json  fx_note_critical_trace_aura.json  fx_note_flick_aura.json  fx_note_flick_flash.json  fx_note_flick_gen.json  fx_note_hold_aura.json  fx_note_long_aura.json  fx_note_long_gen.json  fx_note_long_hold_gen.json  fx_note_long_hold_via_aura.json  fx_note_normal_aura.json  fx_note_normal_gen.json  fx_note_trace_aura.json
MikuMikuWorld/res/effect/1/: fx_lane_critical.json  fx_lane_critical_flick.json  fx_lane_default.json  fx_note_critical_flick_aura.json  fx_note_critical_flick_flash.json  fx_note_critical_flick_gen.json  fx_note_critical_long_aura.json  fx_note_critical_long_gen.json  fx_note_critical_long_hold_gen.json  fx_note_critical_long_hold_gen_aura.json  fx_note_critical_long_hold_via_aura.json  fx_note_critical_normal_aura.json  fx_note_critical_normal_gen.json  fx_note_critical_trace_aura.json  fx_note_flick_aura.json  fx_note_flick_flash.json  fx_note_flick_gen.json  fx_note_hold_aura.json  fx_note_long_aura.json  fx_note_long_gen.json  fx_note_long_hold_gen.json  fx_note_long_hold_via_aura.json  fx_note_normal_aura.json  fx_note_normal_gen.json  fx_note_trace_aura.json
MikuMikuWorld/res/effect/spr/: particles.txt
MikuMikuWorld/res/i18n/: .template.csv  en.csv  es.csv  ja.csv  ru.csv  vi.csv  zh-tw.csv
MikuMikuWorld/res/notes/01/spr/: longNoteLine.txt  notes.txt  touchLine_eff.txt
MikuMikuWorld/res/scp/: Engine.scp
MikuMikuWorld/res/shaders/: basic2d.frag  basic2d.vert  default.frag  default.vert  masking.frag  masking.vert  particles.frag  particles.vert
MikuMikuWorld/res/textures/: particles.pte  transform.txt
MikuMikuWorld/res/textures/spr/: guideColors.txt  longNoteLine.txt  note_stats.txt  notes1.txt  notes2.txt  particles.txt  stage.txt  tex_notes.txt  timeline_tools.txt
ScoreTests/: ScoreTests.cpp  ScoreTests.vcxproj  ScoreTests.vcxproj.filters
